--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,11 +6,11 @@
 
 @layer base {
   @font-face {
-    font-family: 'Raleway';
-    src: url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;800;900&display=swap');
+    font-family: 'Lato';
+    src: url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;500;600;700;800;900&display=swap');
   }
 
   body {
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Lato', sans-serif;
   }
 }
